[package]
name = "pvalve"
version = "0.1.0"
authors = ["Jordan Yelloz <jordan@yelloz.me>"]
edition = "2021"
license = "MIT"

[dependencies]
lazy_static = "*"
config = "*"
nonzero_ext = "0.2"
crossterm = "0.19"
tui = "0.17"
anyhow = "1"
thiserror = "1"
chrono = "0.4"
size_format = "1"
watch = "0.2"
sum-queue = "1.0"
[dependencies.clap]
version = "3"
features = ["derive"]
[dependencies.governor]
version = "0.3"
features = []
