[package]
name = "pvalve"
version = "0.1.0"
authors = ["Jordan Yelloz <jordan@yelloz.me>"]
edition = "2021"
license = "MIT"

[dependencies]
lazy_static = "*"
config = "*"
nonzero_ext = "0.3"
crossterm = "0.25"
tui = "0.19"
anyhow = "1"
thiserror = "1"
size_format = "1"
watch = "0.2"
sum-queue = "1.0"
governor = "0.4"
[dependencies.clap]
version = "3"
features = ["derive"]
